mudanças iniciais no projeto

--- a/SistemaCadastroContatos/Views/Home/Index.cshtml
+++ b/SistemaCadastroContatos/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model HomeModel
+@{
+    ViewData["Title"] = "Página Inicial";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Olá @Model.Nome</h1>
+    <p>Seja Bem Vindo!</p>
+    <span>Seu email é: @Model.Email</span>
 </div>
