--- a/SistemaCadastroContatos/Views/Home/Privacy.cshtml
+++ b/SistemaCadastroContatos/Views/Home/Privacy.cshtml
@@ -1,6 +1,4 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Privacidade";
 }
-<h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Minha página de privacidade.</p>
