--- a/SistemaCadastroContatos/Views/Home/Index.cshtml
+++ b/SistemaCadastroContatos/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
 <div class="text-center">
     <h1 class="display-4">Olá @Model.Nome</h1>
     <p>Seja Bem Vindo!</p>
-    <span>Seu email é: @Model.Email</span>
+    <span>Seu e-mail é: @Model.Email</span>
 </div>
