criação do layout do projeto

--- a/SistemaCadastroContatos/Views/Home/Index.cshtml
+++ b/SistemaCadastroContatos/Views/Home/Index.cshtml
@@ -1,10 +1,8 @@
-﻿@model HomeModel
-@{
+﻿@{
     ViewData["Title"] = "Página Inicial";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Olá @Model.Nome</h1>
-    <p>Seja Bem Vindo!</p>
-    <span>Seu e-mail é: @Model.Email</span>
+    <h1 class="display-4">Seja Bem Vindo!</h1>
+    <p>Sistema de Controle de Contatos</p>
 </div>
