--- a/SistemaCadastroContatos/Views/Contato/Criar.cshtml
+++ b/SistemaCadastroContatos/Views/Contato/Criar.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ContatoModel
+@{
     ViewData["Title"] = "Criar Contatos";
 }
 
@@ -8,20 +9,21 @@
 
 </div>
 
-<form>
+<form asp-controller="Contato" asp-action="Criar" method="post">
+
     <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" class="form-control" placeholder="Digite o nome do contato">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do contato">
     </div>
 
     <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" class="form-control" placeholder="Digite o email do contato">
+        <input asp-for="Email" type="text" class="form-control" placeholder="Digite o email do contato">
     </div>
 
     <div class="form-group">
         <label for="celular">Celular</label>
-        <input type="text" class="form-control" placeholder="Digite celular do contato">
+        <input type="text" asp-for="Celular" class="form-control" placeholder="Digite celular do contato">
     </div>
     <button type="submit" class="btn btn-primary btn-block">Adicionar</button>
     <a class="btn btn-secondary btn-block" asp-controller="Contato" asp-action="Index" role="button">Voltar</a>
